2012-10-07  Richard Murray  <murray@altura.local>

	* src/timeresp.py (forced_response): added discrete time simulator,
	using dlsim from scipy.signal

2012-10-07  Richard Murray  <murray@altura.local>

	* doc/conf.py: fixed release number (0.6a instead of 0.6c)

	* src/__init__.py: moved timebase functions from dtime to lti

	* src/lti.py: moved isdtime, isctime, timebase, and timebaseEqual
	from dtime.py to lti.py.  Moved initialization of dt to
	Lti.__init__().

	* src/statesp.py (StateSpace.__init__): Moved dt
	initialization to Lti object initialization
	
	* src/xferfcn.py (TransferFunction.__init__): Moved dt
	initialization to Lti object initialization

2012-10-06  Richard Murray  <murray@altura.local>

	* tests/discrete_test.py: added additional tests for dt = True cases

	* src/statesp.py (StateSpace.__str__): show sampling time as
	'unspecified' if dt is a boolean and equal to True

	* src/xferfcn.py (TransferFunction.__str__): don't print sampling
	time (dt) if dt = True (discrete time with unspecified time base)

	* src/dtime.py: added code to support dt = True for unspecified
	sampling time for a discrete time system

	* src/bdalg.py: much -> must in docstrings

2012-10-06  Richard Murray  <murray@altura.local>

	* src/dtime.py: new module with functions for operating on discrete
	time systems

	* src/modelsimp.py: added NotImplementedError for discrete time
	* src/freqplot.py: added NotImplementedError for discrete time

	* src/bdalg.py: added documentation about timebases (discrete versus
	continuous)

	* src/statesp.py (_mimo2siso): include sampling time

	* src/xferfcn.py (TransferFunction.__str__): added optional var
	keyword to allow any symbol to be used

	* src/matlab.py (tf2ss): added code required to keep track of dt

	* src/xferfcn.py (TransferFunction.__str__): added additional string for
	discrete time system, plus use 'z' for polynomial variable
	(TransferFunction.__neg__): set sampling time for negation